--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -46,5 +46,5 @@ jobs:
           git init
           git add -A
           git commit -m "Create by workflows"
-          git remote add origin https://${{ secrets.GH_TOKEN }}@github.com/win10ios/win10ios.github.io.git
+          git remote add origin https://${{ secrets.GH_TOKEN }}@github.com/win10ios/studio.git
           git push origin HEAD:gh-pages -f
